修改slurmdb jobs接口字段
